# download-playlist

./: .gitignore  pyproject.toml
src/download_playlist/: main.py
src/download_playlist/commands/: download.py
src/download_playlist/models/: __init__.py  playlist.py
src/download_playlist/services/: __init__.py  downloader.py
