[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "download-playlist"
authors = [
    { name = "Maxime Delrieu", email = "maxime.delrieu@gmail.com" },
]
license = { text = "Apache License 2.0" }
description = "Download songs based on a playlist JSON file."
classifiers = [
    "Framework :: Playlist",
]
dynamic = [
    "version"
]
requires-python = "~=3.12"
dependencies = [
    "dynaconf==3.2.6",
    "pydantic==2.9.2",
    "typer==0.12.5",
]

# [project.urls]
# Homepage = ""
# Source = ""

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
download-playlist = "download_playlist.main:app"

[tool.setuptools.dynamic]
version = { attr = "download_playlist.version.__version__" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"download_playlist.config" = ["settings.toml"]
